<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoporteActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SoporteTextViewID"
            android:text="@string/soporte"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="80sp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/logo"
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/where_is_it___logo_1" />

        <Spinner
            android:id="@+id/spinnerID"
            android:entries="@array/opcionesPQRS"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"
            android:textColor="#000000"
            android:background="@android:drawable/editbox_background" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:hint="@string/escribe_acaa"
            android:inputType="text"
            android:ems="10"
            android:textSize="20sp"
            android:layout_width="320dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:background="@android:drawable/editbox_background"
            android:padding="10dp"
            android:autofillHints="@string/escribe_acaa" />

        <Button
            android:id="@+id/button"
            android:text="@string/enviar"
            android:backgroundTint="@color/blue"
            app:iconTint="@color/blue"
            android:layout_width="313dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>